--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>CSS e JS PRO</title>
 </head>
 
 <body>
 
-    <header>
+    <header class="cabecalho">
 
-        <h1>CSS e JS PRO</h1>
+        <h1 class="cabecalho__titulo" >CSS e JS PRO</h1>
 
     </header>
 
     <main>
 
-        <div>
-            <input type="text" name="" id="">
-            <input type="text" name="" id="">
+        <div class="formulario-cadastro" >
+            <input class="formulario-cadastro__input" placeholder="E-mail" type="text" name="" id="">
+            <input class="formulario-cadastro__input" placeholder="Senha" type="text" name="" id="">
 
-            <button>Cadastrar</button>
+            <button class="formulario-cadastro__botao" >Cadastrar</button>
+
+            <div class="Formulario-cadastro__resultado" >Enviado con Sucesso</div>
+            <div class="Formulario-cadastro__resultado invalido ">Formulário inválido</div>
 
         </div>
 
