--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 
     <title>CSS e JS PRO</title>
 </head>
@@ -21,10 +22,10 @@
     <main>
 
         <div class="formulario-cadastro" >
-            <input class="formulario-cadastro__input" placeholder="E-mail" type="text" name="" id="">
-            <input class="formulario-cadastro__input" placeholder="Senha" type="text" name="" id="">
+            <input id="input1" class="formulario-cadastro__input" placeholder="E-mail" type="text" name="" id="">
+            <input id="input2" class="formulario-cadastro__input" placeholder="Senha" type="text" name="" id="">
 
-            <button class="formulario-cadastro__botao" >Cadastrar</button>
+            <button onclick="validarEChamarAPI()" class="formulario-cadastro__botao" >Cadastrar</button>
 
             <div class="Formulario-cadastro__resultado" >Enviado con Sucesso</div>
             <div class="Formulario-cadastro__resultado invalido ">Formulário inválido</div>
