--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
             <button onclick="validarEChamarAPI()" class="formulario-cadastro__botao" >Cadastrar</button>
 
-            <div class="Formulario-cadastro__resultado" >Enviado con Sucesso</div>
-            <div class="Formulario-cadastro__resultado invalido ">Formulário inválido</div>
+            <div id="ressucesso" class="Formulario-cadastro__resultado sucesso" >Enviado con Sucesso</div>
+            <div id="resinvalido" class="Formulario-cadastro__resultado invalido ">Formulário inválido</div>
 
         </div>
 
