--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
 
         <div class="formulario-cadastro" >
-            <input id="input1" class="formulario-cadastro__input" placeholder="E-mail" type="text" name="" id="">
-            <input id="input2" class="formulario-cadastro__input" placeholder="Senha" type="text" name="" id="">
+            <input id="email" class="formulario-cadastro__input" placeholder="E-mail" type="text" name="" id="">
+            <input id="senha" class="formulario-cadastro__input" placeholder="Senha" type="text" name="" id="">
 
             <button onclick="validarEChamarAPI()" class="formulario-cadastro__botao" >Cadastrar</button>
 
